#160 z-index fix for error container #125 - Added cli support (`styleguide start`)

--- a/templates/scss/site/_modules.scss
+++ b/templates/scss/site/_modules.scss
@@ -481,7 +481,7 @@ $btn-ghost-radius: $border-radius;
     max-height: 123px;
     overflow-y: auto;
     text-align: center;
-    z-index: 998;
+    z-index: 999;
     background: #754A4A;
     //@include transition(opacity .3s);
     //opacity: 0;
